fixes question-button vertical alignment, adds favicon

--- a/style/style.css
+++ b/style/style.css
@@ -166,6 +166,7 @@ header {
 
 /* Question Buttons */
 .question-buttons {
+    margin-top: 5px;
     margin-bottom: 120px;
     display: flex;
     justify-content: space-evenly;
